--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ body {
   /*max-width: 1440px;*/
   /*background: url('/Users/danha/Documents/General Assembly/final_project (new clouds)/hadan16.github.io/images/blue_bg.png') repeat 0 0;*/
   background-image: url("http://hadan16.github.io/images/background2.png");
-  background-size: auto 1416px;
+  background-size: auto;
   background-repeat:no-repeat;
   /*background-image: url("/Users/danha/Documents/General Assembly/final_project (new clouds)/hadan16.github.io/images/ background1.jpg");*/
 
