--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,15 @@ body {
   z-index: 1;
   margin: 2px 0 0 7px;
 }
+
+.center {
+    margin: auto;
+    position: absolute;
+    top: 121px;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100px;
 }
 
 .spacer{
