--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,14 @@ Developer @GA in NYC
 
 /* Center the container */
 .container {
-  width: 960px;
-  margin: auto;
+    z-index: 26;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 195px;
 }
 
 
