--- a/css/style.css
+++ b/css/style.css
@@ -128,15 +128,16 @@ body {
   margin: 2px 0 0 7px;
 }
 
-/*.center {*/
-/*    margin: auto;*/
-/*    position: absolute;*/
-/*    top: 121px;*/
-/*    left: 0;*/
-/*    bottom: 0;*/
-/*    right: 0;*/
-/*    width: 100px;*/
-/*}*/
+.center {
+    margin: auto;
+    position: absolute;
+    top: 128px;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100px;
+    z-index: 1;
+}
 
 .spacer{
     width: 100%;
